# gpusand

./: CMakeLists.txt  README.md
cmake/: FindOgg.cmake  FindVorbis.cmake
res/rules/: sand.ruleset  test.ruleset
res/shaders/: fallablesfall.shader  piling.shader  round bezeled rect.shader  round rect.shader  round shaded rect.shader  round.shader  rules.shader  shader.shader  ui button.shader
res/textures/: ideas.aseprite  ui.aseprite
src/: color.h  rule.cpp  rule.h  source.cpp
src/qw/: quickwork.cpp  quickwork.h  quickwork_au.cpp  quickwork_au.h  quickwork_gl.cpp  quickwork_gl.h  quickwork_io.cpp  quickwork_io.h  quickwork_ui.cpp  quickwork_ui.h
